# editorial-ai-platform

./: .gitignore  AGENTS.md  README.md  pyproject.toml
automations/n8n/: opportunity_pipeline.workflow.json
docs/: ai_ceo_operating_model.md  api_integrations.md  architecture.md  automation_playbook.md  ceo_cto_communication.md  decision_log.md  kdp_launch_readiness.md  kdp_pilot_recommendation.md  market_intelligence.md  roadmap.md
infra/n8n/: .env.example  README.md  docker-compose.yml
scripts/: n8n.ps1  web.ps1
src/editorial_ai/: __init__.py  cli.py
src/editorial_ai/api/: app.py
src/editorial_ai/automations/: __init__.py
src/editorial_ai/automations/n8n/: __init__.py  client.py
src/editorial_ai/core/: __init__.py  defaults.py  models.py  platform.py  ports.py  scoring.py  storage.py  utils.py
src/editorial_ai/integrations/: catalog.py
src/editorial_ai/modules/: __init__.py
src/editorial_ai/modules/analytics/: service.py
src/editorial_ai/modules/book_structures/: __init__.py  service.py
src/editorial_ai/modules/kdp_launch/: __init__.py  service.py
src/editorial_ai/modules/market_intelligence/: __init__.py  service.py
src/editorial_ai/modules/marketing/: __init__.py  service.py
src/editorial_ai/modules/niche_research/: __init__.py  service.py
src/editorial_ai/modules/opportunities/: __init__.py  service.py
src/editorial_ai/web/: __init__.py  dashboard.py  server.py
tests/: test_dashboard.py  test_kdp_launch.py  test_market_intelligence.py  test_pipeline.py  test_scoring.py
web/: app.js  index.html  styles.css
(+6 files in other folders)
